@@ -1,31 +1,56 @@
 package org.jsoup.helper;
 
-import org.jsoup.*;
+import org.jsoup.Connection;
+import org.jsoup.HttpStatusException;
+import org.jsoup.UncheckedIOException;
+import org.jsoup.UnsupportedMimeTypeException;
+import org.jsoup.internal.ConstrainableInputStream;
+import org.jsoup.internal.StringUtil;
 import org.jsoup.nodes.Document;
 import org.jsoup.parser.Parser;
 import org.jsoup.parser.TokenQueue;
 
-import javax.net.ssl.*;
-import java.io.*;
-import java.net.*;
+import javax.net.ssl.HttpsURLConnection;
+import javax.net.ssl.SSLSocketFactory;
+import java.io.BufferedInputStream;
+import java.io.BufferedWriter;
+import java.io.ByteArrayInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.io.OutputStreamWriter;
+import java.io.UnsupportedEncodingException;
+import java.net.HttpURLConnection;
+import java.net.InetSocketAddress;
+import java.net.MalformedURLException;
+import java.net.Proxy;
+import java.net.URI;
+import java.net.URL;
+import java.net.URLEncoder;
+import java.nio.Buffer;
 import java.nio.ByteBuffer;
 import java.nio.charset.Charset;
 import java.nio.charset.IllegalCharsetNameException;
-import java.security.KeyManagementException;
-import java.security.NoSuchAlgorithmException;
-import java.security.cert.X509Certificate;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.regex.Pattern;
 import java.util.zip.GZIPInputStream;
+import java.util.zip.Inflater;
+import java.util.zip.InflaterInputStream;
 
 import static org.jsoup.Connection.Method.HEAD;
+import static org.jsoup.internal.Normalizer.lowerCase;
 
 /**
  * Implementation of {@link Connection}.
  * @see org.jsoup.Jsoup#connect(String)
  */
 public class HttpConnection implements Connection {
-    public static final String  CONTENT_ENCODING = "Content-Encoding";
+    public static final String CONTENT_ENCODING = "Content-Encoding";
     /**
      * Many users would get caught by not setting a user-agent and therefore getting different responses on their desktop
      * vs in jsoup, which would otherwise default to {@code Java}. So by default, use a desktop UA.
@@ -37,6 +62,7 @@ public class HttpConnection implements Connection {
     private static final String MULTIPART_FORM_DATA = "multipart/form-data";
     private static final String FORM_URL_ENCODED = "application/x-www-form-urlencoded";
     private static final int HTTP_TEMP_REDIR = 307; // http/1.1 temporary redirect, not in Java's set.
+    private static final String DefaultUploadType = "application/octet-stream";
 
     public static Connection connect(String url) {
         Connection con = new HttpConnection();
@@ -48,6 +74,11 @@ public class HttpConnection implements Connection {
         Connection con = new HttpConnection();
         con.url(url);
         return con;
+    }
+
+    public HttpConnection() {
+        req = new Request();
+        res = new Response();
     }
 
     /**
@@ -64,10 +95,12 @@ public class HttpConnection implements Connection {
         }
 	}
 
-	private static URL encodeUrl(URL u) {
+    static URL encodeUrl(URL u) {
         try {
             //  odd way to encode urls, but it works!
-            final URI uri = new URI(u.toExternalForm());
+            String urlS = u.toExternalForm(); // URL external form may have spaces which is illegal in new URL() (odd asymmetry)
+            urlS = urlS.replaceAll(" ", "%20");
+            final URI uri = new URI(urlS);
             return new URL(uri.toASCIIString());
         } catch (Exception e) {
             return u;
@@ -82,11 +115,6 @@ public class HttpConnection implements Connection {
 
     private Connection.Request req;
     private Connection.Response res;
-
-	private HttpConnection() {
-        req = new Request();
-        res = new Response();
-    }
 
     public Connection url(URL url) {
         req.url(url);
@@ -155,18 +183,25 @@ public class HttpConnection implements Connection {
         return this;
     }
 
-    public Connection validateTLSCertificates(boolean value) {
-        req.validateTLSCertificates(value);
-        return this;
-    }
 
     public Connection data(String key, String value) {
         req.data(KeyVal.create(key, value));
         return this;
     }
 
+    public Connection sslSocketFactory(SSLSocketFactory sslSocketFactory) {
+	    req.sslSocketFactory(sslSocketFactory);
+	    return this;
+    }
+
     public Connection data(String key, String filename, InputStream inputStream) {
         req.data(KeyVal.create(key, filename, inputStream));
+        return this;
+    }
+
+    @Override
+    public Connection data(String key, String filename, InputStream inputStream, String contentType) {
+        req.data(KeyVal.create(key, filename, inputStream).contentType(contentType));
         return this;
     }
 
@@ -288,12 +323,12 @@ public class HttpConnection implements Connection {
     private static abstract class Base<T extends Connection.Base> implements Connection.Base<T> {
         URL url;
         Method method;
-        Map<String, String> headers;
+        Map<String, List<String>> headers;
         Map<String, String> cookies;
 
         private Base() {
-            headers = new LinkedHashMap<String, String>();
-            cookies = new LinkedHashMap<String, String>();
+            headers = new LinkedHashMap<>();
+            cookies = new LinkedHashMap<>();
         }
 
         public URL url() {
@@ -318,12 +353,34 @@ public class HttpConnection implements Connection {
 
         public String header(String name) {
             Validate.notNull(name, "Header name must not be null");
-            String val = getHeaderCaseInsensitive(name);
-            if (val != null) {
-                // headers should be ISO8859 - but values are often actually UTF-8. Test if it looks like UTF8 and convert if so
-                val = fixHeaderEncoding(val);
+            List<String> vals = getHeadersCaseInsensitive(name);
+            if (vals.size() > 0) {
+                // https://www.w3.org/Protocols/rfc2616/rfc2616-sec4.html#sec4.2
+                return StringUtil.join(vals, ", ");
             }
-            return val;
+
+            return null;
+        }
+
+        @Override
+        public T addHeader(String name, String value) {
+            Validate.notEmpty(name);
+            value = value == null ? "" : value;
+
+            List<String> values = headers(name);
+            if (values.isEmpty()) {
+                values = new ArrayList<>();
+                headers.put(name, values);
+            }
+            values.add(fixHeaderEncoding(value));
+
+            return (T) this;
+        }
+
+        @Override
+        public List<String> headers(String name) {
+            Validate.notEmpty(name);
+            return getHeadersCaseInsensitive(name);
         }
 
         private static String fixHeaderEncoding(String val) {
@@ -377,54 +434,69 @@ public class HttpConnection implements Connection {
 
         public T header(String name, String value) {
             Validate.notEmpty(name, "Header name must not be empty");
-            Validate.notNull(value, "Header value must not be null");
             removeHeader(name); // ensures we don't get an "accept-encoding" and a "Accept-Encoding"
-            headers.put(name, value);
+            addHeader(name, value);
             return (T) this;
         }
 
         public boolean hasHeader(String name) {
             Validate.notEmpty(name, "Header name must not be empty");
-            return getHeaderCaseInsensitive(name) != null;
+            return getHeadersCaseInsensitive(name).size() != 0;
         }
 
         /**
          * Test if the request has a header with this value (case insensitive).
          */
         public boolean hasHeaderWithValue(String name, String value) {
-            return hasHeader(name) && header(name).equalsIgnoreCase(value);
+            Validate.notEmpty(name);
+            Validate.notEmpty(value);
+            List<String> values = headers(name);
+            for (String candidate : values) {
+                if (value.equalsIgnoreCase(candidate))
+                    return true;
+            }
+            return false;
         }
 
         public T removeHeader(String name) {
             Validate.notEmpty(name, "Header name must not be empty");
-            Map.Entry<String, String> entry = scanHeaders(name); // remove is case insensitive too
+            Map.Entry<String, List<String>> entry = scanHeaders(name); // remove is case insensitive too
             if (entry != null)
                 headers.remove(entry.getKey()); // ensures correct case
             return (T) this;
         }
 
         public Map<String, String> headers() {
+            LinkedHashMap<String, String> map = new LinkedHashMap<>(headers.size());
+            for (Map.Entry<String, List<String>> entry : headers.entrySet()) {
+                String header = entry.getKey();
+                List<String> values = entry.getValue();
+                if (values.size() > 0)
+                    map.put(header, values.get(0));
+            }
+            return map;
+        }
+
+        @Override
+        public Map<String, List<String>> multiHeaders() {
             return headers;
         }
 
-        private String getHeaderCaseInsensitive(String name) {
-            Validate.notNull(name, "Header name must not be null");
-            // quick evals for common case of title case, lower case, then scan for mixed
-            String value = headers.get(name);
-            if (value == null)
-                value = headers.get(name.toLowerCase());
-            if (value == null) {
-                Map.Entry<String, String> entry = scanHeaders(name);
-                if (entry != null)
-                    value = entry.getValue();
+        private List<String> getHeadersCaseInsensitive(String name) {
+            Validate.notNull(name);
+
+            for (Map.Entry<String, List<String>> entry : headers.entrySet()) {
+                if (name.equalsIgnoreCase(entry.getKey()))
+                    return entry.getValue();
             }
-            return value;
+
+            return Collections.emptyList();
         }
 
-        private Map.Entry<String, String> scanHeaders(String name) {
-            String lc = name.toLowerCase();
-            for (Map.Entry<String, String> entry : headers.entrySet()) {
-                if (entry.getKey().toLowerCase().equals(lc))
+        private Map.Entry<String, List<String>> scanHeaders(String name) {
+            String lc = lowerCase(name);
+            for (Map.Entry<String, List<String>> entry : headers.entrySet()) {
+                if (lowerCase(entry.getKey()).equals(lc))
                     return entry;
             }
             return null;
@@ -469,17 +541,17 @@ public class HttpConnection implements Connection {
         private boolean ignoreContentType = false;
         private Parser parser;
         private boolean parserDefined = false; // called parser(...) vs initialized in ctor
-        private boolean validateTSLCertificates = true;
         private String postDataCharset = DataUtil.defaultCharset;
+        private SSLSocketFactory sslSocketFactory;
 
-        private Request() {
+        Request() {
             timeoutMilliseconds = 30000; // 30 seconds
             maxBodySizeBytes = 1024 * 1024; // 1MB
             followRedirects = true;
-            data = new ArrayList<Connection.KeyVal>();
+            data = new ArrayList<>();
             method = Method.GET;
-            headers.put("Accept-Encoding", "gzip");
-            headers.put(USER_AGENT, DEFAULT_UA);
+            addHeader("Accept-Encoding", "gzip");
+            addHeader(USER_AGENT, DEFAULT_UA);
             parser = Parser.htmlParser();
         }
 
@@ -530,12 +602,12 @@ public class HttpConnection implements Connection {
             return ignoreHttpErrors;
         }
 
-        public boolean validateTLSCertificates() {
-            return validateTSLCertificates;
+        public SSLSocketFactory sslSocketFactory() {
+            return sslSocketFactory;
         }
 
-        public void validateTLSCertificates(boolean value) {
-            validateTSLCertificates = value;
+        public void sslSocketFactory(SSLSocketFactory sslSocketFactory) {
+            this.sslSocketFactory = sslSocketFactory;
         }
 
         public Connection.Request ignoreHttpErrors(boolean ignoreHttpErrors) {
@@ -595,14 +667,16 @@ public class HttpConnection implements Connection {
 
     public static class Response extends HttpConnection.Base<Connection.Response> implements Connection.Response {
         private static final int MAX_REDIRECTS = 20;
-        private static SSLSocketFactory sslSocketFactory;
         private static final String LOCATION = "Location";
         private int statusCode;
         private String statusMessage;
         private ByteBuffer byteData;
+        private InputStream bodyStream;
+        private HttpURLConnection conn;
         private String charset;
         private String contentType;
         private boolean executed = false;
+        private boolean inputStreamRead = false;
         private int numRedirects = 0;
         private Connection.Request req;
 
@@ -630,6 +704,7 @@ public class HttpConnection implements Connection {
 
         static Response execute(Connection.Request req, Response previousResponse) throws IOException {
             Validate.notNull(req, "Request must not be null");
+            Validate.notNull(req.url(), "URL must be specified to connect");
             String protocol = req.url().getProtocol();
             if (!protocol.equals("http") && !protocol.equals("https"))
                 throw new MalformedURLException("Only http & https protocols supported");
@@ -645,6 +720,7 @@ public class HttpConnection implements Connection {
             else if (methodHasBody)
                 mimeBoundary = setOutputContentType(req);
 
+            long startTime = System.nanoTime();
             HttpURLConnection conn = createConnection(req);
             Response res;
             try {
@@ -665,10 +741,12 @@ public class HttpConnection implements Connection {
                     if (status != HTTP_TEMP_REDIR) {
                         req.method(Method.GET); // always redirect with a get. any data param from original req are dropped.
                         req.data().clear();
+                        req.requestBody(null);
+                        req.removeHeader(CONTENT_TYPE);
                     }
 
                     String location = res.header(LOCATION);
-                    if (location != null && location.startsWith("http:/") && location.charAt(6) != '/') // fix broken Location: http:/temp/AAG_New/en/index.php
+                    if (location.startsWith("http:/") && location.charAt(6) != '/') // fix broken Location: http:/temp/AAG_New/en/index.php
                         location = location.substring(6);
                     URL redir = StringUtil.resolve(req.url(), location);
                     req.url(encodeUrl(redir));
@@ -701,23 +779,25 @@ public class HttpConnection implements Connection {
 
                 res.charset = DataUtil.getCharsetFromContentType(res.contentType); // may be null, readInputStream deals with it
                 if (conn.getContentLength() != 0 && req.method() != HEAD) { // -1 means unknown, chunked. sun throws an IO exception on 500 response with no content when trying to read body
-                    InputStream bodyStream = null;
-                    try {
-                        bodyStream = conn.getErrorStream() != null ? conn.getErrorStream() : conn.getInputStream();
-                        if (res.hasHeaderWithValue(CONTENT_ENCODING, "gzip"))
-                            bodyStream = new GZIPInputStream(bodyStream);
-
-                        res.byteData = DataUtil.readToByteBuffer(bodyStream, req.maxBodySize());
-                    } finally {
-                        if (bodyStream != null) bodyStream.close();
+                    res.bodyStream = null;
+                    res.bodyStream = conn.getErrorStream() != null ? conn.getErrorStream() : conn.getInputStream();
+                    if (res.hasHeaderWithValue(CONTENT_ENCODING, "gzip")) {
+                        res.bodyStream = new GZIPInputStream(res.bodyStream);
+                    } else if (res.hasHeaderWithValue(CONTENT_ENCODING, "deflate")) {
+                        res.bodyStream = new InflaterInputStream(res.bodyStream, new Inflater(true));
                     }
+                    res.bodyStream = ConstrainableInputStream
+                        .wrap(res.bodyStream, DataUtil.bufferSize, req.maxBodySize())
+                        .timeout(startTime, req.timeout())
+                    ;
                 } else {
                     res.byteData = DataUtil.emptyByteBuffer();
                 }
-            } finally {
+            } catch (IOException e){
                 // per Java's documentation, this is not necessary, and precludes keepalives. However in practise,
                 // connection errors will not be released quickly enough and can cause a too many open files error.
                 conn.disconnect();
+                throw e;
             }
 
             res.executed = true;
@@ -757,27 +837,62 @@ public class HttpConnection implements Connection {
 
         public Document parse() throws IOException {
             Validate.isTrue(executed, "Request must be executed (with .execute(), .get(), or .post() before parsing response");
-            Document doc = DataUtil.parseByteData(byteData, charset, url.toExternalForm(), req.parser());
-            byteData.rewind();
+            if (byteData != null) { // bytes have been read in to the buffer, parse that
+                bodyStream = new ByteArrayInputStream(byteData.array());
+                inputStreamRead = false; // ok to reparse if in bytes
+            }
+            Validate.isFalse(inputStreamRead, "Input stream already read and parsed, cannot re-read.");
+            Document doc = DataUtil.parseInputStream(bodyStream, charset, url.toExternalForm(), req.parser());
             charset = doc.outputSettings().charset().name(); // update charset from meta-equiv, possibly
+            inputStreamRead = true;
+            safeClose();
             return doc;
         }
 
-        public String body() {
+        private void prepareByteData() {
             Validate.isTrue(executed, "Request must be executed (with .execute(), .get(), or .post() before getting response body");
+            if (byteData == null) {
+                Validate.isFalse(inputStreamRead, "Request has already been read (with .parse())");
+                try {
+                    byteData = DataUtil.readToByteBuffer(bodyStream, req.maxBodySize());
+                } catch (IOException e) {
+                    throw new UncheckedIOException(e);
+                } finally {
+                    inputStreamRead = true;
+                    safeClose();
+                }
+            }
+        }
+
+        public String body() {
+            prepareByteData();
             // charset gets set from header on execute, and from meta-equiv on parse. parse may not have happened yet
             String body;
             if (charset == null)
                 body = Charset.forName(DataUtil.defaultCharset).decode(byteData).toString();
             else
                 body = Charset.forName(charset).decode(byteData).toString();
-            byteData.rewind();
+            ((Buffer)byteData).rewind(); // cast to avoid covariant return type change in jdk9
             return body;
         }
 
         public byte[] bodyAsBytes() {
-            Validate.isTrue(executed, "Request must be executed (with .execute(), .get(), or .post() before getting response body");
+            prepareByteData();
             return byteData.array();
+        }
+
+        @Override
+        public Connection.Response bufferUp() {
+            prepareByteData();
+            return this;
+        }
+
+        @Override
+        public BufferedInputStream bodyStream() {
+            Validate.isTrue(executed, "Request must be executed (with .execute(), .get(), or .post() before getting response body");
+            Validate.isFalse(inputStreamRead, "Request has already been read");
+            inputStreamRead = true;
+            return ConstrainableInputStream.wrap(bodyStream, DataUtil.bufferSize, req.maxBodySize());
         }
 
         // set up connection defaults, and details from request
@@ -791,84 +906,44 @@ public class HttpConnection implements Connection {
             conn.setRequestMethod(req.method().name());
             conn.setInstanceFollowRedirects(false); // don't rely on native redirection support
             conn.setConnectTimeout(req.timeout());
-            conn.setReadTimeout(req.timeout());
+            conn.setReadTimeout(req.timeout() / 2); // gets reduced after connection is made and status is read
 
-            if (conn instanceof HttpsURLConnection) {
-                if (!req.validateTLSCertificates()) {
-                    initUnSecureTSL();
-                    ((HttpsURLConnection)conn).setSSLSocketFactory(sslSocketFactory);
-                    ((HttpsURLConnection)conn).setHostnameVerifier(getInsecureVerifier());
-                }
-            }
-
+            if (req.sslSocketFactory() != null && conn instanceof HttpsURLConnection)
+                ((HttpsURLConnection) conn).setSSLSocketFactory(req.sslSocketFactory());
             if (req.method().hasBody())
                 conn.setDoOutput(true);
             if (req.cookies().size() > 0)
                 conn.addRequestProperty("Cookie", getRequestCookieString(req));
-            for (Map.Entry<String, String> header : req.headers().entrySet()) {
-                conn.addRequestProperty(header.getKey(), header.getValue());
+            for (Map.Entry<String, List<String>> header : req.multiHeaders().entrySet()) {
+                for (String value : header.getValue()) {
+                    conn.addRequestProperty(header.getKey(), value);
+                }
             }
             return conn;
         }
 
         /**
-         * Instantiate Hostname Verifier that does nothing.
-         * This is used for connections with disabled SSL certificates validation.
-         *
-         *
-         * @return Hostname Verifier that does nothing and accepts all hostnames
+         * Call on completion of stream read, to close the body (or error) stream
          */
-        private static HostnameVerifier getInsecureVerifier() {
-            return new HostnameVerifier() {
-                public boolean verify(String urlHostName, SSLSession session) {
-                    return true;
-                }
-            };
-        }
-
-        /**
-         * Initialise Trust manager that does not validate certificate chains and
-         * add it to current SSLContext.
-         * <p/>
-         * please not that this method will only perform action if sslSocketFactory is not yet
-         * instantiated.
-         *
-         * @throws IOException
-         */
-        private static synchronized void initUnSecureTSL() throws IOException {
-            if (sslSocketFactory == null) {
-                // Create a trust manager that does not validate certificate chains
-                final TrustManager[] trustAllCerts = new TrustManager[]{new X509TrustManager() {
-
-                    public void checkClientTrusted(final X509Certificate[] chain, final String authType) {
-                    }
-
-                    public void checkServerTrusted(final X509Certificate[] chain, final String authType) {
-                    }
-
-                    public X509Certificate[] getAcceptedIssuers() {
-                        return null;
-                    }
-                }};
-
-                // Install the all-trusting trust manager
-                final SSLContext sslContext;
+        private void safeClose() {
+            if (conn != null) {
+                conn.disconnect();
+                conn = null;
+            }
+            if (bodyStream != null) {
                 try {
-                    sslContext = SSLContext.getInstance("SSL");
-                    sslContext.init(null, trustAllCerts, new java.security.SecureRandom());
-                    // Create an ssl socket factory with our all-trusting manager
-                    sslSocketFactory = sslContext.getSocketFactory();
-                } catch (NoSuchAlgorithmException e) {
-                    throw new IOException("Can't create unsecure trust manager");
-                } catch (KeyManagementException e) {
-                    throw new IOException("Can't create unsecure trust manager");
+                    bodyStream.close();
+                } catch (IOException e) {
+                    // no-op
+                } finally {
+                    bodyStream = null;
                 }
             }
-
         }
 
         // set up url, method, header, cookies
-        private void setupFromConnection(HttpURLConnection conn, Connection.Response previousResponse) throws IOException {
+        private void setupFromConnection(HttpURLConnection conn, HttpConnection.Response previousResponse) throws IOException {
+            this.conn = conn;
             method = Method.valueOf(conn.getRequestMethod());
             url = conn.getURL();
             statusCode = conn.getResponseCode();
@@ -884,12 +959,13 @@ public class HttpConnection implements Connection {
                     if (!hasCookie(prevCookie.getKey()))
                         cookie(prevCookie.getKey(), prevCookie.getValue());
                 }
+                previousResponse.safeClose();
             }
         }
 
         private static LinkedHashMap<String, List<String>> createHeaderMap(HttpURLConnection conn) {
             // the default sun impl of conn.getHeaderFields() returns header values out of order
-            final LinkedHashMap<String, List<String>> headers = new LinkedHashMap<String, List<String>>();
+            final LinkedHashMap<String, List<String>> headers = new LinkedHashMap<>();
             int i = 0;
             while (true) {
                 final String key = conn.getHeaderFieldKey(i);
@@ -903,7 +979,7 @@ public class HttpConnection implements Connection {
                 if (headers.containsKey(key))
                     headers.get(key).add(val);
                 else {
-                    final ArrayList<String> vals = new ArrayList<String>();
+                    final ArrayList<String> vals = new ArrayList<>();
                     vals.add(val);
                     headers.put(key, vals);
                 }
@@ -930,19 +1006,9 @@ public class HttpConnection implements Connection {
                         if (cookieName.length() > 0)
                             cookie(cookieName, cookieVal);
                     }
-                } else { // combine same header names with comma: http://www.w3.org/Protocols/rfc2616/rfc2616-sec4.html#sec4.2
-                    if (values.size() == 1)
-                        header(name, values.get(0));
-                    else if (values.size() > 1) {
-                        StringBuilder accum = new StringBuilder();
-                        for (int i = 0; i < values.size(); i++) {
-                            final String val = values.get(i);
-                            if (i != 0)
-                                accum.append(", ");
-                            accum.append(val);
-                        }
-                        header(name, accum.toString());
-                    }
+                }
+                for (String value : values) {
+                    addHeader(name, value);
                 }
             }
         }
@@ -978,7 +1044,9 @@ public class HttpConnection implements Connection {
                     if (keyVal.hasInputStream()) {
                         w.write("; filename=\"");
                         w.write(encodeMimeName(keyVal.value()));
-                        w.write("\"\r\nContent-Type: application/octet-stream\r\n\r\n");
+                        w.write("\"\r\nContent-Type: ");
+                        w.write(keyVal.contentType() != null ? keyVal.contentType() : DefaultUploadType);
+                        w.write("\r\n\r\n");
                         w.flush(); // flush
                         DataUtil.crossStreams(keyVal.inputStream(), outputStream);
                         outputStream.flush();
@@ -1013,7 +1081,7 @@ public class HttpConnection implements Connection {
         }
 
         private static String getRequestCookieString(Connection.Request req) {
-            StringBuilder sb = new StringBuilder();
+            StringBuilder sb = StringUtil.borrowBuilder();
             boolean first = true;
             for (Map.Entry<String, String> cookie : req.cookies().entrySet()) {
                 if (!first)
@@ -1023,7 +1091,7 @@ public class HttpConnection implements Connection {
                 sb.append(cookie.getKey()).append('=').append(cookie.getValue());
                 // todo: spec says only ascii, no escaping / encoding defined. validate on set? or escape somehow here?
             }
-            return sb.toString();
+            return StringUtil.releaseBuilder(sb);
         }
 
         private static boolean checkThatRedirectLocationIsDifferent(Connection.Response res) {
@@ -1040,7 +1108,7 @@ public class HttpConnection implements Connection {
         // for get url reqs, serialise the data map into the url
         private static void serialiseRequestUrl(Connection.Request req) throws IOException {
             URL in = req.url();
-            StringBuilder url = new StringBuilder();
+            StringBuilder url = StringUtil.borrowBuilder();
             boolean first = true;
             // reconstitute the query, ready for appends
             url
@@ -1064,27 +1132,25 @@ public class HttpConnection implements Connection {
                     .append('=')
                     .append(URLEncoder.encode(keyVal.value(), DataUtil.defaultCharset));
             }
-            req.url(new URL(url.toString()));
+            req.url(new URL(StringUtil.releaseBuilder(url)));
             req.data().clear(); // moved into url as get params
         }
     }
 
     private static boolean needsMultipart(Connection.Request req) {
         // multipart mode, for files. add the header if we see something with an inputstream, and return a non-null boundary
-        boolean needsMulti = false;
         for (Connection.KeyVal keyVal : req.data()) {
-            if (keyVal.hasInputStream()) {
-                needsMulti = true;
-                break;
-            }
+            if (keyVal.hasInputStream())
+                return true;
         }
-        return needsMulti;
+        return false;
     }
 
     public static class KeyVal implements Connection.KeyVal {
         private String key;
         private String value;
         private InputStream stream;
+        private String contentType;
 
         public static KeyVal create(String key, String value) {
             return new KeyVal().key(key).value(value);
@@ -1128,6 +1194,18 @@ public class HttpConnection implements Connection {
 
         public boolean hasInputStream() {
             return stream != null;
+        }
+
+        @Override
+        public Connection.KeyVal contentType(String contentType) {
+            Validate.notEmpty(contentType);
+            this.contentType = contentType;
+            return this;
+        }
+
+        @Override
+        public String contentType() {
+            return contentType;
         }
 
         @Override
